Client: defer puting the inode

To make sure the code is under client_lock when puting the inodes.

Fixes: https://tracker.ceph.com/issues/46882
Signed-off-by: Xiubo Li <xiubli@redhat.com>